--- a/com.hand-music/index.html
+++ b/com.hand-music/index.html
@@ -9,11 +9,10 @@
     <!-- p5.sound: estensione audio per p5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
     <!-- ml5.js: machine learning semplificato (handpose, bodypose, ecc.) -->
-    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ml5@0.12.2/dist/ml5.min.js"></script>
     <!-- Tone.js: sintesi e manipolazione audio/musicale -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js"></script>
-    <!-- sketch.js: tuo script personalizzato (opzionale) -->
-    <script src="sketch.js"></script>
+    
 
   </head>
 
